api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api
  replicas: 3
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: maria9h9/rustapi
          ports:
            - containerPort: 8080

#para el servicio de exponer la api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
