ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.mhernandez.com
      http:
        paths:
          - path: /helados
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
